2.19.0: MP3/Opus/WAV playback, cheaper minimap, FPS Boost levels, wings editor, new cap visor
Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>