@@ -1,8 +1,6 @@
 package tech.gulp.lavavisual.audio;
 
 import java.io.IOException;
-import java.nio.ByteBuffer;
-import java.nio.IntBuffer;
 import java.nio.ShortBuffer;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -16,21 +14,19 @@ import net.minecraft.sounds.SoundSource;
 import org.lwjgl.openal.AL10;
 import org.lwjgl.openal.AL11;
 import org.lwjgl.openal.ALC10;
-import org.lwjgl.stb.STBVorbis;
-import org.lwjgl.stb.STBVorbisInfo;
-import org.lwjgl.system.MemoryStack;
 import org.lwjgl.system.MemoryUtil;
 import tech.gulp.lavavisual.LavaVisual;
 import tech.gulp.lavavisual.LavaVisualClient;
 
 /**
- * Music from config/lavavisual-hud/music (.ogg Vorbis), streamed through Minecraft's OpenAL device: play / pause,
- * seeking, previous / next, shuffle and repeat. A small daemon thread keeps four 0.4 s buffers queued, so lag spikes
+ * Music from config/lavavisual-hud/music (MP3, Ogg Vorbis, Opus, WAV; the format is read from the file itself), played
+ * through Minecraft's OpenAL device: play / pause, seeking, previous / next, shuffle and repeat. A small daemon thread keeps four 0.4 s buffers queued, so lag spikes
  * in the game do not stutter the music. The master volume and the player's own volume apply; vanilla background music
  * is kept quiet while a track plays.
  */
 public final class MusicPlayer {
-    public record Track(Path file, String name, String title, String artist, double seconds, boolean playable) {
+    public record Track(Path file, String name, String title, String artist, double seconds, String problem, String format) {
+        public boolean playable() { return problem.isEmpty(); }
         public String shown() { return title.isBlank() ? name : title; }
         public String line() { return artist.isBlank() ? shown() : artist + " — " + shown(); }
     }
@@ -38,12 +34,15 @@ public final class MusicPlayer {
     private static final Object LOCK = new Object();
     private static final List<Track> TRACKS = new ArrayList<>();
     private static final int[] BUFFER_IDS = new int[BUFFERS], BUFFER_FRAMES = new int[BUFFERS];
-    private static final ArrayDeque<Integer> QUEUE = new ArrayDeque<>();
+    private static final ArrayDeque<Integer> QUEUE = new ArrayDeque<>(), FREE = new ArrayDeque<>();
     private static final Random RANDOM = new Random();
-    private static int index = -1, channels, rate, source, lengthFrames, skipped;
-    private static long handle, baseFrame, context;
-    private static ByteBuffer data;
+    private static int index = -1, channels, rate, source, skipped;
+    private static long baseFrame, context;
+    private static Decoders.Source decoder;
+    private static short[] chunk;
     private static ShortBuffer pcm;
+    private static volatile String error = "";
+    private static volatile boolean failed;
     private static volatile boolean playing, paused, ended, finished;
     private static Thread streamer;
     private static int musicQuietTicks;
@@ -63,18 +62,18 @@ public final class MusicPlayer {
     public static boolean active() { return playing; }
     public static boolean playing() { return playing && !paused; }
     public static boolean paused() { return playing && paused; }
+    /** Why the last track did not play (shown in the player), or "". */
+    public static String error() { return error; }
 
     /** Rescans the music folder (sorted by name); keeps the current track playing when it is still there. */
     public static void rescan(Path dir) {
         List<Track> found = new ArrayList<>();
         int bad = 0;
         if (Files.isDirectory(dir)) try (Stream<Path> files = Files.list(dir)) {
-            for (Path file : files.filter(MusicPlayer::isOgg).sorted().toList()) {
-                OggInfo info = OggInfo.read(file, 256 << 10, false);
-                String name = file.getFileName().toString();
-                name = name.substring(0, name.length() - 4);
+            for (Path file : files.filter(AudioInfo::isAudio).sorted().toList()) {
+                AudioInfo info = AudioInfo.read(file, 256 << 10, false);
                 if (!info.playable()) bad++;
-                found.add(new Track(file, name, info.title, info.artist, info.seconds, info.playable()));
+                found.add(new Track(file, AudioInfo.baseName(file), info.title, info.artist, info.seconds, info.problem, info.format.label));
             }
         } catch (IOException error) {
             LavaVisual.LOGGER.warn("LavaVisual: cannot read the music folder", error);
@@ -89,7 +88,6 @@ public final class MusicPlayer {
             if (index < 0 && playing) close();
         }
     }
-    public static boolean isOgg(Path file) { return Files.isRegularFile(file) && file.getFileName().toString().toLowerCase(java.util.Locale.ROOT).endsWith(".ogg"); }
 
     public static void play(int i) {
         synchronized (LOCK) {
@@ -97,56 +95,60 @@ public final class MusicPlayer {
             if (i < 0 || i >= TRACKS.size()) return;
             index = i;
             Track track = TRACKS.get(i);
-            if (!track.playable() || !LavaAudio.ready()) return;
+            error = "";
+            failed = false;
+            if (!track.playable()) { fail(track, track.problem()); return; }
+            if (!LavaAudio.ready()) { fail(track, "звук игры недоступен (OpenAL)"); return; }
             try {
-                byte[] bytes = Files.readAllBytes(track.file());
-                data = MemoryUtil.memAlloc(bytes.length);
-                data.put(bytes).flip();
-                try (MemoryStack stack = MemoryStack.stackPush()) {
-                    IntBuffer error = stack.mallocInt(1);
-                    handle = STBVorbis.stb_vorbis_open_memory(data, error, null);
-                    if (handle == 0) { close(); return; }
-                    STBVorbisInfo info = STBVorbisInfo.malloc(stack);
-                    STBVorbis.stb_vorbis_get_info(handle, info);
-                    channels = info.channels();
-                    rate = info.sample_rate();
-                }
-                if (channels < 1 || channels > 2 || rate <= 0) { close(); return; }
-                lengthFrames = STBVorbis.stb_vorbis_stream_length_in_samples(handle);
-                pcm = MemoryUtil.memAllocShort(rate * CHUNK_MS / 1000 * channels);
+                decoder = Decoders.open(track.file(), AudioInfo.read(track.file(), 1 << 20, false), true);
+                channels = decoder.channels();
+                rate = decoder.rate();
+                int frames = rate * CHUNK_MS / 1000;
+                chunk = new short[frames * channels];
+                pcm = MemoryUtil.memAllocShort(frames * channels);
                 AL10.alGetError();
                 source = AL10.alGenSources();
                 for (int b = 0; b < BUFFERS; b++) BUFFER_IDS[b] = AL10.alGenBuffers();
-                if (AL10.alGetError() != AL10.AL_NO_ERROR) { close(); return; }
+                if (AL10.alGetError() != AL10.AL_NO_ERROR) { close(); fail(track, "OpenAL не дал источник звука"); return; }
                 context = ALC10.alcGetCurrentContext();
                 AL10.alSourcei(source, AL10.AL_SOURCE_RELATIVE, AL10.AL_TRUE);
                 AL10.alSource3f(source, AL10.AL_POSITION, 0, 0, 0);
                 AL10.alSourcef(source, AL10.AL_ROLLOFF_FACTOR, 0);
                 AL10.alSourcef(source, AL10.AL_GAIN, gain());
+                for (int b = 0; b < BUFFERS; b++) FREE.addLast(BUFFER_IDS[b]);
                 baseFrame = 0;
                 ended = finished = paused = false;
-                for (int b = 0; b < BUFFERS; b++) if (!fill(BUFFER_IDS[b])) { ended = true; break; }
-                AL10.alSourcePlay(source);
                 playing = true;
+                refill();
+                if (!QUEUE.isEmpty()) AL10.alSourcePlay(source);
                 musicQuietTicks = 0;
                 startStreamer();
-            } catch (IOException | RuntimeException | LinkageError error) {
-                LavaVisual.LOGGER.warn("LavaVisual: cannot play {}", track.file().getFileName(), error);
+            } catch (IOException | RuntimeException | LinkageError failure) {
+                LavaVisual.LOGGER.warn("LavaVisual: cannot play {}", track.file().getFileName(), failure);
                 close();
+                fail(track, failure.getMessage() == null ? failure.getClass().getSimpleName() : failure.getMessage());
             }
         }
     }
-    /** Decodes the next chunk into the buffer and queues it; false at the end of the track. */
-    private static boolean fill(int buffer) {
-        pcm.clear();
-        int frames = STBVorbis.stb_vorbis_get_samples_short_interleaved(handle, channels, pcm);
-        if (frames <= 0) return false;
-        pcm.limit(frames * channels);
-        AL10.alBufferData(buffer, channels == 1 ? AL10.AL_FORMAT_MONO16 : AL10.AL_FORMAT_STEREO16, pcm, rate);
-        for (int b = 0; b < BUFFERS; b++) if (BUFFER_IDS[b] == buffer) BUFFER_FRAMES[b] = frames;
-        AL10.alSourceQueueBuffers(source, buffer);
-        QUEUE.addLast(buffer);
-        return true;
+    private static void fail(Track track, String why) {
+        error = why;
+        LavaVisual.LOGGER.warn("LavaVisual: {} does not play: {}", track.file().getFileName(), why);
+        tech.gulp.lavavisual.input.Binds.Toast.show("Не играет: " + why);
+    }
+    /** Queues decoded audio into every free buffer; stops early when the decoder has not produced more yet. */
+    private static void refill() {
+        while (!ended && !FREE.isEmpty()) {
+            int frames = decoder.read(chunk, chunk.length / channels);
+            if (frames < 0) { ended = true; break; }
+            if (frames == 0) break;
+            int buffer = FREE.pollFirst();
+            pcm.clear();
+            pcm.put(chunk, 0, frames * channels).flip();
+            AL10.alBufferData(buffer, channels == 1 ? AL10.AL_FORMAT_MONO16 : AL10.AL_FORMAT_STEREO16, pcm, rate);
+            for (int b = 0; b < BUFFERS; b++) if (BUFFER_IDS[b] == buffer) BUFFER_FRAMES[b] = frames;
+            AL10.alSourceQueueBuffers(source, buffer);
+            QUEUE.addLast(buffer);
+        }
     }
     private static int frames(int buffer) {
         for (int b = 0; b < BUFFERS; b++) if (BUFFER_IDS[b] == buffer) return BUFFER_FRAMES[b];
@@ -166,17 +168,21 @@ public final class MusicPlayer {
         streamer.start();
     }
     private static void stream() {
-        if (!playing || source == 0 || ALC10.alcGetCurrentContext() != context) return;
+        if (!playing || source == 0 || decoder == null || ALC10.alcGetCurrentContext() != context) return;
         int processed = AL10.alGetSourcei(source, AL10.AL_BUFFERS_PROCESSED);
         while (processed-- > 0) {
             int buffer = AL10.alSourceUnqueueBuffers(source);
             QUEUE.pollFirst();
             baseFrame += frames(buffer);
-            if (!ended && !fill(buffer)) ended = true;
+            FREE.addLast(buffer);
         }
-        if (!paused && AL10.alGetSourcei(source, AL10.AL_SOURCE_STATE) == AL10.AL_STOPPED) {
-            if (!QUEUE.isEmpty()) AL10.alSourcePlay(source); // recovered from an underrun
-            else if (ended) finished = true;
+        refill();
+        if (!paused && AL10.alGetSourcei(source, AL10.AL_SOURCE_STATE) != AL10.AL_PLAYING) {
+            if (!QUEUE.isEmpty()) AL10.alSourcePlay(source); // first data or recovered from an underrun
+            else if (ended) {
+                if (baseFrame == 0 && !decoder.error().isEmpty()) failed = true; // nothing decoded at all
+                else finished = true;
+            }
         }
     }
     /** Client tick: track end -> next, live volume, device restarts, quiet vanilla music. */
@@ -192,6 +198,14 @@ public final class MusicPlayer {
             int track = index;
             synchronized (LOCK) { source = 0; close(); } // the old device's AL objects are gone
             if (LavaAudio.ready()) { play(track); seek(at); if (wasPaused) toggle(); }
+            return;
+        }
+        if (failed) {
+            failed = false;
+            Track track = current();
+            String why;
+            synchronized (LOCK) { why = decoder == null || decoder.error().isEmpty() ? "файл не декодируется" : decoder.error(); close(); }
+            if (track != null) fail(track, why);
             return;
         }
         if (finished) { finished = false; next(true); }
@@ -239,16 +253,19 @@ public final class MusicPlayer {
 
     public static void seek(double seconds) {
         synchronized (LOCK) {
-            if (!playing || handle == 0) return;
-            int frame = (int) Math.clamp(seconds * rate, 0, Math.max(0, lengthFrames - 1));
+            if (!playing || decoder == null) return;
+            long length = decoder.length(), frame = (long) Math.max(0, seconds * rate);
+            if (length > 0) frame = Math.min(frame, Math.max(0, length - 1));
             AL10.alSourceStop(source);
             AL10.alSourcei(source, AL10.AL_BUFFER, 0);
             QUEUE.clear();
-            STBVorbis.stb_vorbis_seek(handle, frame);
+            FREE.clear();
+            for (int b = 0; b < BUFFERS; b++) FREE.addLast(BUFFER_IDS[b]);
+            decoder.seek(frame);
             baseFrame = frame;
             ended = finished = false;
-            for (int b = 0; b < BUFFERS; b++) if (!fill(BUFFER_IDS[b])) { ended = true; break; }
-            if (!paused) AL10.alSourcePlay(source);
+            refill();
+            if (!paused && !QUEUE.isEmpty()) AL10.alSourcePlay(source);
         }
     }
     public static double position() {
@@ -260,7 +277,8 @@ public final class MusicPlayer {
     }
     public static double duration() {
         synchronized (LOCK) {
-            if (playing && rate > 0 && lengthFrames > 0) return lengthFrames / (double) rate;
+            long length = playing && decoder != null ? decoder.length() : -1;
+            if (rate > 0 && length > 0) return length / (double) rate;
             Track t = index >= 0 && index < TRACKS.size() ? TRACKS.get(index) : null;
             return t == null ? 0 : t.seconds();
         }
@@ -279,11 +297,11 @@ public final class MusicPlayer {
         source = 0;
         java.util.Arrays.fill(BUFFER_IDS, 0);
         QUEUE.clear();
-        if (handle != 0) { STBVorbis.stb_vorbis_close(handle); handle = 0; }
-        if (data != null) { MemoryUtil.memFree(data); data = null; }
+        FREE.clear();
+        if (decoder != null) { decoder.close(); decoder = null; }
         if (pcm != null) { MemoryUtil.memFree(pcm); pcm = null; }
+        chunk = null;
         playing = paused = ended = finished = false;
-        lengthFrames = 0;
     }
     public static String time(double seconds) {
         int s = (int) Math.max(0, Math.round(seconds));
